resources/css/dagviz.css
body{
	font-family:'Exo 2','Consolas','Roboto Mono','Open Sans','Ubuntu Mono',courier-new,courier,monospace;font-size:17px;
	--bg-color:#FFF;
	--graph-stroke:rgba(0,0,0,0.5);
	--graph-node-link-default-color-1:rgba(0,0,0,0.65);
	--graph-node-link-default-color-2:rgba(0,0,0,0.65);
	--graph-square-stroke:#333;
	--graph-color-a-1:rgba(155,207,255,0.99);
	--graph-color-a-2:rgba(107, 198, 250,1);
	--graph-color-a-3:rgba(83, 191, 252,1);
	--graph-color-a-4:rgba(43, 179, 255,1);
	--graph-color-a-5:rgba(194,244,255,0.99);
	--graph-color-new-1:var(--bg-color);
	--graph-color-new-2:var(--bg-color);
	--graph-color-new-3:var(--bg-color);
	--graph-color-new-4:var(--bg-color);
	--graph-color-new-5:var(--bg-color);

	--graph-color-b-1:rgba(249,164,192,0.99);
	--graph-color-b-2:rgba(251,116,118,1);/*hover*/
	--graph-color-b-3:rgba(251,116,118,1);
	--graph-color-b-4:rgba(251,116,118,1);
	--graph-color-b-5:rgba(255,194,194,0.99);

	--graph-node-selector-stroke:rgba(0,0,0,0.5);
	--graph-node-selector-fill:rgba(0,0,0,0.5);
	--graph-node-text-color:#000;
	--graph-link-tealing-color:rgba(0, 150, 136, 1);
	--graph-link-selected-color:blue;

	--graph-shape-unknown-color:rgba(184,163,136,1);

	--node-info-border-color:rgba(0,0,0,.12);
	--node-info-title-border-color:#DDD;
	--node-info-box-shadow:0 1px 1.5px 0 rgba(0,0,0,.12), 0 1px 1px 0 rgba(0,0,0,.24);
	--node-info-bg-color:#FFF;

	--arrow-head-fill:#000;
	--arrow-head-stroke:#000;

	opacity:0;
	transition:opacity 0.2s ease;

	--flow-primary-color:rgba(0, 150, 136, 1);
	--flow-border-color:rgb(0, 133, 119);
	--flow-border-hover-color:rgba(2, 97, 74, 1);


}
body.k-theme-dark{
	opacity:1;
	--bg-color:#202020;
	--k-close-btn-bg-color:#202020;
	background-color:var(--bg-color);
	--graph-node-link-default-color-1:rgba(255,255,255,0.95);
	--graph-node-link-default-color-2:rgba(255,255,255,0.95);
	--graph-square-stroke:#c6c6c6;
	--graph-color-a-1:#0077c2;
	--graph-color-a-3:#022338;
	--graph-color-b-1:#ba2d65;
	--graph-color-b-2:#540323;/*hover*/
	--graph-color-b-3:#540323;
	/*--graph-link-selected-color:rgba(0, 119, 194,1);*/

	--arrow-head-fill:#c3c2c2;
	--arrow-head-stroke:#c3c2c2;
	--graph-node-text-color:#FFF;

	--flow-primary-color:  rgba(0,150,136,1);
	--flow-border-color:  rgba(0,150,136,1);
}
body.k-theme-light{
	opacity:1;
}
#dagViz{height:100vh;}
#address{
	font-family:'Exo 2','Consolas','Roboto Mono','Open Sans','Ubuntu Mono',courier-new,courier,monospace;font-size:16px;
	position:absolute;right:8px;top:8px;color:rgb(52,74,87);
	font-weight:400;
}
#top{
	font-family:'Exo 2','Consolas','Roboto Mono','Open Sans','Ubuntu Mono',courier-new,courier,monospace;font-size:17px;
	position:absolute;left:8px;right:8px;top:8px;color:#222;
	font-weight:400;display:flex;flex-direction:column;user-select:none;
}


#explorer{margin-right:16px;}
#search{
	min-width:320px;flex:1;border:none;border-bottom:1px solid #888;
	height:24px;font-family:'Cousine';font-size:16px;
	margin:2px;padding-left:8px;background-color:transparent;
}
#search-wrapper{padding:0px 16px;background-color:var(--bg-color);align-items:center;}
#logo{
	background:url('/resources/images/k-subtract.svg') center no-repeat;
	background-size:contain;background-color:var(--bg-color);width:66px;
	height:56px;margin-right:16px;
}
.toggle{
	cursor:pointer;margin:2px 8px 2px 8px;padding:2px;display:block;
	border-top:1px solid rgba(0,0,0,0);user-select:none;
}  
.toggle:hover{color:rgba(0,70,70,0.95);border-radius:0px;}
.toggle > .caption{min-width:135px;display:inline-block;}
.toggle > .value{min-width:130px;display:inline-block;}

/*
#bottom{
	font-family:'Roboto Mono','Consolas','Roboto Mono','Open Sans','Ubuntu Mono',courier-new,courier,monospace;font-size:17px;
	position:absolute;left:4px;bottom:54px;color:#444;
	font-weight:400;
}
*/		

#selection,
.block-boxes-holder{
	font-family:'Roboto Mono',Consolas,'Roboto Mono','Open Sans','Ubuntu Mono',courier-new,courier,monospace;
	font-size:17px;position:absolute;left:4px;bottom:58px;color:#444;font-weight:400;
	display:flex;flex-direction:row;flex-wrap:wrap-reverse;
	align-items:flex-start;justify-content:left;
}

body.orient-v #selection{
    flex-direction:column;align-items:flex-start;
	align-content:flex-start;bottom:0px;right:62px;top:0px;
}

#selection,
.block-boxes-holder{
	pointer-events:none;
}

#selection > *,
.block-boxes-holder>*{
	pointer-events:auto;
}
.position{min-width:120px;display:inline-block;}
body{
	padding:0px;margin:0px;overflow:hidden;
	--last-block-widget-border-color:#009688;
}


#left{position:absolute;left:10px;top:72px;user-select:none;}
#left .tool{
	background-position:center center;
	background-size:cover;background-repeat:no-repeat;transition:all 0.15s;
	cursor:pointer;width:24px;height:24px;margin-top:16px;text-align:center;
	opacity:0.5;transition:all 0.25s;
}

#left .tool:hover{opacity:1.0;}
.needs-multi-select{display:none;opacity:0;transition:all 0.5s;}
.needs-single-select{display:none;opacity:0;transition:all 0.5s;}

.tool:hover{opacity:1.0;}
#copy-url{display:none;}
.tooltip{
	opacity:0.6;display:block;margin:2px;display:flex;
	flex-direction:row;justify-content:left;
}

.tooltip i{display:block;margin:2px 4px 2px 4px;font-size:18px;}
.tooltip .text{display:block;margin:2px 4px 2px 4px;}

#menu-bar,#top{pointer-events:none;}
#menu-bar .menu-item{pointer-events:initial;}

#menu-bar,
.menu-items{
	display:flex;flex-direction:row; 
	/* flex-wrap:wrap; */
}
.menu-items{height:56px}
#menu-bar .flex,
.menu-items .flex{flex:1;}
.menu-item i,
.icon-wrapper i{font-size:24px;line-height:56px;}
.menu-item{
	cursor:pointer;height:56px;min-width:56px;text-align:center;
	background-color:var(--bg-color);
	margin-bottom:5px;
}
.menu-item>img{
	width:24px;height:auto;transition:all 0.1s;margin-top:16px;
	display:none;
}
.menu-item span{line-height:56px;display:inline-block;padding:0px 10px;}
.menu-item .orient-N{transform:rotate(0deg);}
.menu-item .orient-E{transform:rotate(90deg);}
.menu-item .orient-S{transform:rotate(180deg);}
.menu-item .orient-W{transform:rotate(270deg);}
.menu-items .menu-item{margin-bottom:0px;}
#search ::placeholder{color:#bbb;}
#search:focus{outline:none;}
.search-btn{opacity:0;transition:opacity 1s;}
#tracking *{opacity:0.25;}
#tracking.tracking-enabled *{opacity:1;}

.search-btn>img{display:initial;}

#info{font-size:16px;}
.block-info-tip{font-family:"Cousine";font-size:14px;}
.block-info-tip tr td{vertical-align:top;text-shadow:0px 0px 2px white;}
.block-info-tip tr td i{
	display:inline-block;margin-top:4px;font-size:20px;margin-right:4px;
	opacity:0.75;
}
.block-info-tip tr td .caption{color:#666;}
#metrics{
	position:absolute;visibility:hidden;height:auto;
	width:auto;white-space:nowrap;
	/* Thanks to Herb Caudill comment */
	font-family:'Cousine';font-size:16px;
}


#timenav{
	position:absolute;bottom:0px;left:0px;
	right:0px;height:48px;width:100%;
	background-color:transparent;
}

body.orient-v #timenav{
	width:64px;height:calc(100vh - 64px);border-top:0px;position:absolute;
	left:unset;top:64px;right:0px;
}
body.orient-v #dagViz{height:100vh;width:100vw;}
.win{
	position:fixed;z-index:-1;width:100%;height:calc(100% - 70px);
	left:0px;top:70px;opacity:0;transition:opacity 0.2s ease;
	background-color:rgba(255,255,255,0.5);
}
.win.active{z-index:10000;opacity:1;}
.win.active .backdrop{
	position:absolute;left:0px;top:0px;right:0px;bottom:0px;height:100%
}
.win-box{
	background-color:#FFF;position:absolute;width:100%;height:100%;
	left:0px;top:0px;border-radius:3px;
}
.win-box>*{width:100%;height:100%;position:absolute;left:0px;top:0px;}
.win:not(.active).win-box>*{height:0px;width:0px;}
.block-boxes-holder{z-index:10000;bottom:10px;left:10px;}
menu-panel{z-index:100;}

body:not(.explorer-active) #explorer .vis,
body.explorer-active #explorer .exp{display:none}

.k-theme-dark menu-panel{background-color:#383737;}
.k-theme-dark .toggle:hover{color:#009688;}
.k-theme-dark #top,
.k-theme-dark #search,
.k-theme-dark .block-info-tip tr td,
body.k-theme-dark{
	color:#c3c2c2;
}
body.k-theme-dark{
	--rect-stroke-color-1:rgba(255,255,255,0.7);
	--block-info-bg-color:#202020;
	--block-info-color:#999;

	--block-td-color:var(--block-info-color);
	--block-strong-color:#FFF;

	--block-bg-color-1:#351f1f;
	--block-hover-bg-color-1:#4a2d2d;
	

	--block-bg-color-2:#1a2a2d;
	--block-hover-bg-color-2:#2d4246;
	--block-box-shadow:0 2px 2px 0 rgba(0,0,0,.14),
		0 3px 1px -2px rgba(0,0,0,.2),
		0 1px 5px 0 rgba(0,0,0,.12);

	--block-button-filter:invert(0.8);

	--navigator-stroke-color:rgba(255,255,255,0.25);
	--navigator-fill-color:rgba(255,255,255,0.325);
	--navigator-thumb-stroke-color:#6a6a6a;
	--navigator-thumb-fill-color:#363636;
	--navigator-thumb-text-fill-color:#c3c2c2;
	--last-block-widget-border-color:#FFF;
}
.k-theme-dark #get-multi-select-link,
.k-theme-dark #menu-bar #explorer>img,
.k-theme-dark #menu-bar #orientation>img,
.k-theme-dark #menu-bar #tracking>*{
	filter:invert(0.8);
}
.k-theme-dark #menu-bar #tracking>*{opacity:0.5;}
.k-theme-dark #menu-bar #tracking.tracking-enabled>*{opacity:1;}
.k-theme-dark .block-info-tip tr td{text-shadow:none;}
#orientation,#tracking,
body.tracking-enabled last-block-widget{display:none}
body:not(.tracking-enabled) last-block-widget{display:inline-block;opacity:1}
@media(max-width:915px){
	#search{min-width:100px;}
	#search::placeholder{font-size:0.5rem}
	menu-panel>span.toggle{padding:5px 0px;}
	#timenav{
		bottom:10px;
	}
}


#track {display:none;}
.advanced {display:none;}

@media(max-width:425px){
	#top{right:8px;right:8px;z-index:10}
	#logo{margin-right:0px;}
	#menu-anchor{position:absolute;right:0px}
	menu-panel{
		left:8px !important;right:8px !important;box-sizing:border-box;
		width:100% !important;top:8px !important;
		width:calc(100% - 16px) !important;
		height:calc(100% - 300px) !important;
	}
	
	.menu-items{margin-left:0px;width:100%;margin-top:5px;}
	body.orient-v .menu-items{width:calc(100% - 64px);box-sizing:border-box;}
	body.orient-v .menu-items+.flex{display:none}

	/* last-block-widget{top:20px;right:68px} */


}

@media(max-width:425px), (max-height:425px){
	#dir {display:none;}
	#mass {display:none;}
	#quality {display:none;}
	#spacingFactor {display:none;}
	#k-theme {display:none;}

	
}

body.orient-v last-block-widget{right:68px;z-index:10}

